# ModemManager

./: .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  ModemManager.pc.in  NEWS  NetworkManager-r3989-use-modem-manager.patch  NetworkManager-r4012-use-modem-manager.patch  NetworkManager-r4027-use-modem-manager.patch  NetworkManager-r4060-use-modem-manager.patch  NetworkManager-r4160-use-modem-manager.patch  NetworkManager-r4209-use-modem-manager.patch  NetworkManager-r4232-use-modem-manager.patch  NetworkManager-r4241-use-modem-manager.patch  README  README.md  RELEASING  TODO  autogen.sh  configure.ac  configure.in  gtester.make  gtk-doc.make  header-generator.xsl  meson.build  meson_options.txt  nm-applet-r861-use-modem-manager.patch  nm-applet-r866-use-modem-manager.patch  nm-applet-r874-use-modem-manager.patch  nm-applet-r884-use-modem-manager.patch  nm-applet-r965-use-modem-manager.patch  nm-applet-r994-use-modem-manager.patch  org.freedesktop.ModemManager.conf  org.freedesktop.ModemManager.conf.nopolkit  org.freedesktop.ModemManager.conf.polkit  org.freedesktop.ModemManager.service.in  uml290.txt
callouts/: 77-mm-modem-probe-capabilities.rules  Makefile.am  mm-modem-probe.c
cli/: Makefile.am  main.c  meson.build  mmcli-bearer.c  mmcli-call.c  mmcli-cbm.c  mmcli-common.c  mmcli-common.h  mmcli-completion  mmcli-manager.c  mmcli-modem-3gpp-profile-manager.c  mmcli-modem-3gpp-ussd.c  mmcli-modem-3gpp.c  mmcli-modem-cdma.c  mmcli-modem-cell-broadcast.c  mmcli-modem-firmware.c  mmcli-modem-location.c  mmcli-modem-messaging.c  mmcli-modem-oma.c  mmcli-modem-sar.c  mmcli-modem-signal.c  mmcli-modem-simple.c  mmcli-modem-time.c  mmcli-modem-voice.c  mmcli-modem.c  mmcli-output.c  mmcli-output.h  mmcli-sim.c  mmcli-sms.c  mmcli.c  mmcli.h
data/: Makefile.am  ModemManager-interface-initialization-sequence-subclassed.dia  ModemManager-interface-initialization-sequence.dia  ModemManager.pc.in  ModemManager.service.in  meson.build  mm-common.pc.in  mm-glib.pc.in  org.freedesktop.ModemManager.conf.nopolkit  org.freedesktop.ModemManager1.conf.nopolkit  org.freedesktop.ModemManager1.conf.polkit  org.freedesktop.ModemManager1.policy.in  org.freedesktop.ModemManager1.policy.in.in  org.freedesktop.ModemManager1.service.in  org.freedesktop.ModemManager1.service.nosystemd.in  org.freedesktop.ModemManager1.service.systemd.in  org.freedesktop.modem-manager.policy.in  valgrind.suppressions
include/: Makefile.am  ModemManager-compat.h  ModemManager-enums.h  ModemManager-errors.h  ModemManager-tags.h  ModemManager-version.h.in  ModemManager.h  ModemManager1.h  meson.build
introspection/: Makefile.am  all.xml  meson.build  mm-cdma-modem.xml  mm-gsm-modem-hso.xml  mm-gsm-modem.xml  mm-manager.xml  mm-mobile-error.xml  mm-modem-cdma.xml  mm-modem-connect-error.xml  mm-modem-error.xml  mm-modem-gsm-card.xml  mm-modem-gsm-contacts.xml  mm-modem-gsm-hso.xml  mm-modem-gsm-mbm.xml  mm-modem-gsm-network.xml  mm-modem-gsm-sms.xml  mm-modem-gsm-ussd.xml  mm-modem-gsm.xml  mm-modem-location.xml  mm-modem-simple.xml  mm-modem.xml  org.freedesktop.DBus.Properties.xml  org.freedesktop.ModemManager.Modem.Cdma.xml  org.freedesktop.ModemManager.Modem.Gsm.Card.xml  org.freedesktop.ModemManager.Modem.Gsm.Hso.xml  org.freedesktop.ModemManager.Modem.Gsm.Network.xml  org.freedesktop.ModemManager.Modem.Gsm.SMS.xml  org.freedesktop.ModemManager.Modem.Gsm.Ussd.xml  org.freedesktop.ModemManager.Modem.Gsm.xml  org.freedesktop.ModemManager.Modem.Location.xml  org.freedesktop.ModemManager.Modem.Simple.xml  org.freedesktop.ModemManager.Modem.xml  org.freedesktop.ModemManager.xml  org.freedesktop.ModemManager1.Bearer.xml  org.freedesktop.ModemManager1.Call.xml  org.freedesktop.ModemManager1.Cbm.xml  org.freedesktop.ModemManager1.Modem.CellBroadcast.xml  org.freedesktop.ModemManager1.Modem.Firmware.xml  org.freedesktop.ModemManager1.Modem.Location.xml  (+16 more)
libmm-common/: Makefile.am  libmm-common.h  mm-bearer-ip-config.h  mm-bearer-properties.c  mm-bearer-properties.h  mm-common-bearer-ip-config.c  mm-common-bearer-ip-config.h  mm-common-bearer-properties.c  mm-common-bearer-properties.h  mm-common-connect-properties.c  mm-common-connect-properties.h  mm-common-helpers.c  mm-common-helpers.h  mm-common-location-3gpp.c  mm-common-location-3gpp.h  mm-common-simple-properties.c  mm-common-simple-properties.h  mm-common-sms-properties.c  mm-common-sms-properties.h  mm-errors-quarks.c  mm-firmware-properties.c  mm-location-3gpp.c  mm-location-gps-nmea.c  mm-location-gps-nmea.h  mm-location-gps-raw.c  mm-location-gps-raw.h  mm-network-timezone.c  mm-simple-connect-properties.c  mm-simple-connect-properties.h  mm-simple-status.c  mm-simple-status.h  mm-sms-properties.c  mm-sms-properties.h  mm-unlock-retries.h
libmm-glib/: Makefile.am  libmm-common.h  libmm-glib.h  meson.build  mm-3gpp-profile.c  mm-3gpp-profile.h  mm-bearer-ip-config.c  mm-bearer-ip-config.h  mm-bearer-properties.c  mm-bearer-properties.h  mm-bearer-stats.c  mm-bearer-stats.h  mm-bearer.c  mm-bearer.h  mm-call-audio-format.c  mm-call-audio-format.h  mm-call-properties.c  mm-call-properties.h  mm-call.c  mm-call.h  mm-cbm.c  mm-cbm.h  mm-cdma-manual-activation-properties.c  mm-cdma-manual-activation-properties.h  mm-cell-info-cdma.c  mm-cell-info-cdma.h  mm-cell-info-gsm.c  mm-cell-info-gsm.h  mm-cell-info-lte.c  mm-cell-info-lte.h  mm-cell-info-nr5g.c  mm-cell-info-nr5g.h  mm-cell-info-tdscdma.c  mm-cell-info-tdscdma.h  mm-cell-info-umts.c  mm-cell-info-umts.h  mm-cell-info.c  mm-cell-info.h  mm-common-helpers.c  mm-common-helpers.h  (+86 more)
libqcdm/: autogen.sh  configure.ac
marshallers/: Makefile.am  mm-marshal-main.c  mm-marshal.list
plugins/: 77-mm-ericsson-mbm.rules  77-mm-longcheer-port-types.rules  77-mm-nokia-port-types.rules  77-mm-simtech-port-types.rules  77-mm-x22x-port-types.rules  77-mm-zte-port-types.rules  Makefile.am  README.txt  meson.build  mm-bearer-iridium.c  mm-broadband-modem-cinterion.c  mm-broadband-modem-cinterion.h  mm-broadband-modem-gobi.c  mm-broadband-modem-gobi.h  mm-broadband-modem-iridium.c  mm-icera-utils.c  (+100 more)
(+1182 files in other folders)
